Pass `Charset` directly